--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
 .DS_Store
 *.pyc
+*~
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/simplejson/decoder.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/simplejson/encoder.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/simplejson/scanner.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/simplejson/__init__.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/mozrunner/killableprocess.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/mozrunner/__init__.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/jetpack_sdk_env.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/cuddlefish/version.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/cuddlefish/runner.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/cuddlefish/prefs.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/cuddlefish/__init__.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/cuddlefish/bunch.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/cuddlefish/manifest.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/cuddlefish/packaging.pyc
+
+addon-sdk/addon-sdk-1.0b5-fourthparty/python-lib/cuddlefish/preflight.pyc
